--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -300,12 +300,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Start services with docker-compose
-      run: docker-compose up -d
+      run: docker compose up -d
 
     - name: Wait for services to be ready
       run: |
-        timeout 60 bash -c 'until docker-compose exec -T postgres pg_isready; do sleep 2; done'
-        timeout 60 bash -c 'until docker-compose exec -T redis redis-cli ping; do sleep 2; done'
+        timeout 60 bash -c 'until docker compose exec -T postgres pg_isready; do sleep 2; done'
+        timeout 60 bash -c 'until docker compose exec -T redis redis-cli ping; do sleep 2; done'
 
     - name: Check API health
       run: |
@@ -314,11 +314,11 @@ jobs:
 
     - name: Check database connectivity
       run: |
-        docker-compose exec -T postgres psql -U koinon -d koinon -c "SELECT 1"
+        docker compose exec -T postgres psql -U koinon -d koinon -c "SELECT 1"
 
     - name: Cleanup
       if: always()
-      run: docker-compose down -v
+      run: docker compose down -v
 
   # Work unit validation
   work-unit-validation:
