fix: Correct database connection for migration validation in CI
The migration safety check was trying to CREATE DATABASE koinon from within
the koinon_test database, which fails. Changed to connect to the postgres
system database where database creation is allowed.

This fixes the 'Migration Safety Check' job failure for PRs with new migrations.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -211,7 +211,7 @@ jobs:
     - name: Create migration database
       if: steps.check-migrations.outputs.migrations_found == 'true'
       run: |
-        PGPASSWORD=koinon_test psql -h localhost -U koinon -d koinon_test -c "CREATE DATABASE koinon;"
+        PGPASSWORD=koinon_test psql -h localhost -U koinon -d postgres -c "CREATE DATABASE koinon;"
         PGPASSWORD=koinon_test psql -h localhost -U koinon -d koinon_test -c "ALTER USER koinon WITH PASSWORD 'koinon';"
 
     - name: Validate migrations can apply
