--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   quick-check:
     name: Quick PR Validation
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux]
     timeout-minutes: 10
 
     steps:
