--- a/.github/workflows/sync-dev.yml
+++ b/.github/workflows/sync-dev.yml
@@ -6,7 +6,7 @@
 
   jobs:
     sync-dev:
-      runs-on: ubuntu-latest
+      runs-on: [self-hosted, linux]
       permissions:
         contents: write
       steps:
