refactor(pre-bash): enforce MCP-first and block dangerous commands #221

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,7 @@ tmp/validate-output.log
 # Change Orders and Requests
 docs/change-orders/
 test-results/.last-run.json
+
+# Maximus Ephemeral Configs
+.maximus.conf
+CLAUDE.md
