--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,7 @@ test-results/.last-run.json
 docs/EMERGENCY-SECURITY-FIXES.md
 docs/security-fixes/README.md
 tools/graph/__pycache__/verify-contracts.cpython-312.pyc
+issues.json
+list_bugs.sh
+view_issue.sh
+issue_429.txt
