refactor(api): extract campus logic to service (#419)
- Create ICampusService and CampusService to handle business logic

- Refactor CampusesController to depend on ICampusService instead of DbContext

- Add Create/Update validators

- Add AutoMapper profile for Campuses

- Add unit tests for service and controller

--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,8 @@ issues.json
 list_bugs.sh
 view_issue.sh
 issue_429.txt
+issue_419.txt
+sprint_23_bugs.json
+test_output.txt
+build_output.txt
+build_errors.txt
